share/static/alice-dark.css
tr.input, div.msg {
  -webkit-font-smoothing: antialiased; }

div.window.active {
  display: block; }

div.window {
  display: none; }

input[type="hidden"] {
  display: none; }

body {
  margin: 0;
  padding: 0;
  color: white; }

ul#tabs {
  z-index: 20; }

ul#tabs li:hover {
  cursor: default; }

ul#controls {
  z-index: 30;
  background: #444444; }

body.blurred ul#controls {
  background: #333333; }

ul#controls li {
  position: relative; }

ul#controls li.dropdown {
  width: 22px;
  height: 22px;
  border: none;
  padding: 0;
  margin: 0;
  position: relative; }

li.dropdown li.unread {
  font-weight: bold; }

li#tab_menu {
  background: url(image/sprites.png) 3px -174px no-repeat; }

li#tab_menu.unread {
  background: url(image/sprites.png) 3px -194px no-repeat; }

li#tab_menu.unread.highlight {
  background: url(image/sprites.png) -20px -194px no-repeat; }

li#config_menu {
  background: url(image/sprites.png) 4px -216px no-repeat; }

li#connection_status.loading {
  background: url(image/loading.gif) center 3px no-repeat;
  opacity: 0.4; }

ul#controls li#connection_status:hover {
  background-color: transparent; }

body {
  font-family: "Lucida Grande", Helvetica, sans-serif;
  text-rendering: optimizeLegibility;
  background: #222222; }

a:link, a:visited, a:hover, a:active {
  color: white; }

a:hover {
  text-shadow: rgba(255, 255, 255, 0.8) 0 1px 1px; }

div.window {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 53px;
  overflow-x: hidden;
  overflow-y: auto;
  background: #222222; }

div#input {
  background: #333333;
  border-bottom: 1px solid #222222;
  border-top: 1px solid #444444;
  position: absolute;
  bottom: 24px;
  left: 0px;
  right: 0px; }

body.blurred div#input {
  border-bottom: 1px solid #111111; }

div#input form {
  display: block;
  margin: 0;
  padding: 0;
  height: auto;
  line-height: 0px; }

div#input div {
  padding: 0 3px;
  background: black;
  margin: 3px 0;
  position: relative; }

div#input div.editor,
div#input textarea {
  line-height: 1.2em;
  min-height: 1.2em;
  width: 100%;
  padding: 3px 0;
  border: none;
  margin: 0;
  outline: 0 none;
  font-size: 12px;
  overflow: hidden;
  resize: none;
  font-family: "Lucida Grande", Helvetica, sans-serif; }

div.editor {
  white-space: pre-wrap;
  -khtml-nbsp-mode: space; }

div#input div.editor_toolbar {
  overflow: hidden;
  position: absolute;
  right: -170px;
  padding-right: 8px;
  top: -3px;
  width: 180px;
  height: 20px;
  -webkit-border-radius: 3px 0 0 3px;
  -moz-border-radius: 3px 0 0 3px;
  border-radius: 3px 0 0 3px;
  background: url(image/sprites.png) 0px -240px no-repeat black;
  z-index: 902;
  opacity: 0.2;
  -webkit-transition-property: right;
  -webkit-transition-duration: 0.3s; }

div#input div.editor_toolbar button {
  visibility: hidden;
  display: block;
  float: left;
  color: #222222;
  line-height: 10px;
  font-size: 11px;
  margin: 0;
  padding: 4px 3px 5px 3px;
  text-align: center;
  background: none;
  cursor: pointer;
  border: none; }

div#input div.editor_toolbar button:hover {
  color: black; }

div#input div.editor_toolbar button.selected {
  color: yellow; }

.bold {
  font-weight: bold; }

.italic {
  font-style: italic; }

.underline {
  text-decoration: underline; }

div#input div.editor_toolbar:hover {
  opacity: 0.4;
  cursor: pointer; }

div#input div.editor_toolbar.visible:hover {
  opacity: 1;
  cursor: inherit; }

div#input div.editor_toolbar.visible {
  background-color: rgba(255, 255, 255, 0.6);
  background-image: none;
  right: -4px;
  -webkit-transition-property: right;
  -webkit-transition-duration: 0.3s;
  opacity: 1; }

div#input div.editor_toolbar.visible button {
  visibility: visible; }

div.editor div,
div.editor p,
div.editor h1,
div.editor h2,
div.editor h3,
div.editor h4,
div.editor h5,
div.editor span {
  font-size: 1em !important;
  margin: 0 !important;
  padding: 0 !important; }

div.editor img {
  display: none !important; }

div#input input.send {
  display: none; }

div#tab_container {
  position: fixed;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 52px;
  background: #444444; }

body.blurred div#tab_container {
  background: #333333; }

ul#tabs {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 11px;
  position: absolute;
  bottom: 0px;
  left: 3px;
  right: 62px; }

body.blurred ul#tabs li {
  background: #333333;
  color: #cccccc; }

ul#tabs li {
  float: left;
  margin: 0;
  margin-left: -1px;
  color: white;
  background: #444444; }

body.blurred ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #333333; }

ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #444444; }

ul#tabs li div.hit_area {
  border: 1px solid #222222;
  border-bottom: none;
  border-top: none;
  float: left;
  height: 14px;
  padding: 2px 10px 8px 4px; }

body.blurred ul#tabs li div.hit_area {
  border: 1px solid #111111;
  border-bottom: none;
  border-top: none; }

body.blurred ul#tabs li.active div.hit_area {
  border: 1px solid #111111;
  border-top: none; }

ul#tabs li.active div.hit_area {
  border: 1px solid #222222;
  border-top: none;
  background: #333333;
  height: 11px;
  padding-top: 3px;
  margin-top: -1px; }

ul#tabs li.active {
  height: 23px;
  z-index: 21; }

ul#tabs li.active:hover div.hit_area {
  background: #333333; }

ul#tabs li:hover div.hit_area {
  background: #3a3a3a; }

ul#controls {
  position: fixed;
  bottom: 0px;
  right: 0px;
  height: 23px;
  margin: 0;
  padding: 0 2px 0 0;
  list-style: none; }

ul#controls > li {
  float: right;
  margin: 0;
  padding: 0;
  height: 16px;
  width: 16px;
  padding: 4px 3px 3px 3px; }

ul#controls > li:hover {
  background-color: #3a3a3a; }

div.topic {
  width: 100%;
  background: #3a3a3a;
  font-size: 11px;
  text-align: center;
  border-top: 1px solid #666666;
  border-bottom: 1px solid black;
  padding: 1px 0;
  height: 1.2em;
  overflow: hidden; }

div.topic {
  text-decoration: none; }
/* ... */

